Closed Bug 212346 Opened 22 years ago Closed 22 years ago

nsCSSFrameConstructor.cpp:4182: warning: unused variable `class nsIView * listView'

Categories

(Core :: CSS Parsing and Computation, defect)

x86
BeOS
defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

(--disable-debug)
Attachment #127492 - Flags: review?(bzbarsky)
Attachment #127492 - Flags: superreview+
Attachment #127492 - Flags: review?(bzbarsky)
Attachment #127492 - Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: