Bug 212346 nsCSSFrameConstructor.cpp:4182: warning: unused variable `class nsIView * listView' r=bz sr=bz